Bug 107706 - CRASH: Crash when closing Calc document
Summary: CRASH: Crash when closing Calc document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-05-08 18:11 UTC by Telesto
Modified: 2017-05-13 11:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (8.14 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-05-08 18:11 UTC, Telesto
Details
backtrace (28.58 KB, text/x-log)
2017-05-09 12:34 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-05-08 18:11:19 UTC
Description:
LibO seems to crash under specific circumstances

Steps to Reproduce:
1. Open an empty Writer document
2. Open an empty Calc document
2. Enable search toolbar (CTRL+F) in Calc
3. Open the attached file
4. Press CTRL+SHIFT+F -> Search toolbar will show: Search Key Not Found
5. Click in the search field; and type: ABF
6. Hit enter -> I16 will be found
7. Close Calc -> Crash

Actual Results:  
Crash

Expected Results:
No crash


Reproducible: Always

User Profile Reset: No

Additional Info:
Found in
Version: 5.4.0.0.alpha1+
Build ID: 274ecb49b70b3f01d47546e3b44317946c106042
CPU threads: 4; OS: Windows 6.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-05_22:45:07
Locale: en-US (nl_NL); Calc: single


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Telesto 2017-05-08 18:11:40 UTC
Created attachment 133164 [details]
Example file
Comment 2 m_a_riosv 2017-05-08 20:46:12 UTC
I can't reproduce
Version: 5.4.0.0.alpha1+
Build ID: c3e0b7dd4e7b1d33b8555e0acdf9f44cfc043ca2
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-05-08_00:14:11
Locale: es-ES (es_ES); Calc: CL
Comment 3 Telesto 2017-05-09 11:21:16 UTC
Small change to the steps to reproduce
1. Open an empty Writer document
2. Open an empty Calc document
3. Enable search toolbar (CTRL+F) in Calc
4. Close the calc document
5. Open the attached file (from Writer)
6. Press CTRL+SHIFT+F -> Search toolbar will show: Search Key Not Found
7. Click in the search field; and type: ABF
8. Hit enter -> I16 will be found
9. Close Calc -> Crash

crashreport.libreoffice.org/stats/crash_details/799c14bf-81f9-4b0d-ba9e-8185f4769c9f
Comment 4 Xisco Faulí 2017-05-09 11:57:31 UTC
I can reproduce it in

Version: 5.4.0.0.alpha1+
Build ID: f12096272e684ddcd8ffa4e34dcb0a680cc594c2
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

it's important to close LibreOffice from the X button above the menubar. It doesn't break if you close the dialog from File - Close
Comment 5 Xisco Faulí 2017-05-09 12:18:46 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-01-11 07:48:18 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-01-13 06:49:23 (GMT)
commit e8b49f09074fe184374bee5062715357427ae044 (patch)
tree b9cf1f5e3d7ab8b98345a512b6ddb0da42fe2919
parent 5e0e27e758e6f7fa325f36e6e51540e10bab0fdc (diff)
new loplugin: useuniqueptr: vcl

Bisected with bibisect-linux-64-5.4

Adding Cc: to Noel Grandin
Comment 6 Xisco Faulí 2017-05-09 12:34:09 UTC
Created attachment 133190 [details]
backtrace
Comment 7 Commit Notification 2017-05-11 08:28:12 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6fd7dd08b478857234a3b1b5b18e65e9b250174

tdf#107706 fix crash when closing Calc document

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-05-11 09:07:37 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ff893426093652221a8602e71c7924c46d3386f&h=libreoffice-5-3

tdf#107706 fix crash when closing Calc document

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2017-05-13 11:33:58 UTC
Verified in

Version: 5.4.0.0.alpha1+
Build ID: 2e399f32e7505bdcf855112d8a48ae0edefe5bbc
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: fo-FO (ca_ES.UTF-8); Calc: group