tdf#107706 fix crash when closing Calc document

regression from commit e8b49f09074fe184374bee5062715357427ae044
"new loplugin: useuniqueptr: vcl"

Change-Id: I07ac157a02aa82b1ddbb741797fea093772f93f1
Reviewed-on: https://gerrit.libreoffice.org/37497
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>